--- a/templates/news_feed.html
+++ b/templates/news_feed.html
@@ -232,14 +232,28 @@
 								</li>
 							</ul>
 							<ul class="nav navbar-nav navbar-right">
-								<li class="dropdown">
+								<!-- <li class="dropdown">
 									<a href="#" class="dropdown-toggle" data-toggle="dropdown"><i
 											class="glyphicon glyphicon-user"></i>{{email}}</a>
 									<ul class="dropdown-menu">
-										<li><a href="">My Profile</a></li>
+										<li><a href="\myProfile">My Profile</a></li>
 										<li><a href="">Settings</a></li>
 										<li><a href="">Log out</a></li>
 									</ul>
+								</li> -->
+								<li class="dropdown">
+									<a class="dropdown-toggle" data-toggle="dropdown"><i
+											class="glyphicon glyphicon-user"></i>{{email}}</a>
+									<ul class="dropdown-menu">
+										<li><a href="\myProfile">My Profile</a></li>
+										<li><a href="">Settings</a></li>
+										<li><a href="">Log out</a></li>
+									</ul>
+									<!-- <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+									  <a class="dropdown-item" href="#">Action</a>
+									  <a class="dropdown-item" href="#">Another action</a>
+									  <a class="dropdown-item" href="#">Something else here</a>
+									</div> -->
 								</li>
 							</ul>
 						</nav>
