--- a/templates/profile.html
+++ b/templates/profile.html
@@ -140,12 +140,15 @@
                                     <script>
                                         document.getElementById('hidden').value = window.location.href.substring(window.location.href.lastIndexOf('/') + 1);
                                     </script>
+                                    {% if connect_status == 1 %}
+                                    <button class="btn btn-success" disabled> Connection requested </button>
+                                    {% endif %}
                                     {% if friend_status == 0 %}
-                                    <button class="btn btn-success" type="submit"> Send friend request </button>
+                                    <button class="btn btn-success" type="submit"> Connect </button>
                                     {% elif friend_status == 1 %}
-                                    <button class="btn btn-success" disabled> Friend request sent </button>
+                                    <button class="btn btn-success" disabled> Connect request sent </button>
                                     {% else %}
-                                    <button class="btn btn-success" disabled> You're friends! </button>
+                                    <button class="btn btn-success" disabled> Connected! </button>
                                     {% endif %}
                                 </form>
                                 <!-- <a href="/send_friend_request"> <button type="button" class="btn btn-success">Send
