--- a/templates/myProfile.html
+++ b/templates/myProfile.html
@@ -79,7 +79,7 @@
 
                     <ul class="nav navbar-nav">
                         <li>
-                            <a href="/news_feed/{{email}}"><i class="glyphicon glyphicon-home"></i> Home</a>
+                            <a href="/news_feed"><i class="glyphicon glyphicon-home"></i> Home</a>
                         </li>
                         <!-- <li>
                             <a href="#postModal" role="button" data-toggle="modal"><i
@@ -95,8 +95,8 @@
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i
                                     class="glyphicon glyphicon-user"></i>{{email}}</a>
                             <ul class="dropdown-menu">
-                                <li><a href="">My Profile</a></li>
-                                <li><a href="">Settings</a></li>
+                                <li><a href="/myProfile">My Profile</a></li>
+                                <li><a href="/settings">Settings</a></li>
                                 <li><a href="">Log out</a></li>
                             </ul>
                         </li>
