--- a/templates/profile.html
+++ b/templates/profile.html
@@ -79,7 +79,7 @@
 
                     <ul class="nav navbar-nav">
                         <li>
-                            <a href="/news_feed/{{email}}"><i class="glyphicon glyphicon-home"></i> Home</a>
+                            <a href="/news_feed"><i class="glyphicon glyphicon-home"></i> Home</a>
                         </li>
                         <!-- <li>
                             <a href="#postModal" role="button" data-toggle="modal"><i
@@ -93,9 +93,9 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i
-                                    class="glyphicon glyphicon-user"></i>{{email}}</a>
+                                    class="glyphicon glyphicon-user"></i>{{myEmail}}</a>
                             <ul class="dropdown-menu">
-                                <li><a href="">My Profile</a></li>
+                                <li><a href="/myProfile">My Profile</a></li>
                                 <li><a href="">Settings</a></li>
                                 <li><a href="">Log out</a></li>
                             </ul>
@@ -140,16 +140,7 @@
                                     <script>
                                         document.getElementById('hidden').value = window.location.href.substring(window.location.href.lastIndexOf('/') + 1);
                                     </script>
-                                    {% if connect_status == 1 %}
-                                    <button class="btn btn-success" disabled> Connection requested </button>
-                                    {% endif %}
-                                    {% if friend_status == 0 %}
-                                    <button class="btn btn-success" type="submit"> Connect </button>
-                                    {% elif friend_status == 1 %}
-                                    <button class="btn btn-success" disabled> Connect request sent </button>
-                                    {% else %}
-                                    <button class="btn btn-success" disabled> Connected! </button>
-                                    {% endif %}
+                                    <button class="btn btn-success" type="submit" onclick="this.disabled=true"> Send friend request</button>
                                 </form>
                                 <!-- <a href="/send_friend_request"> <button type="button" class="btn btn-success">Send
                                         friend
